@@ -1,0 +1,11 @@
+﻿namespace AjTalk.Ast
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public interface INode
+    {
+    }
+}
