@@ -223,6 +223,9 @@ New ExecutionBlock constructor using block.Closure
 ExecutionBlock.NoLocals, .NoParentLocals, .NoArguments, .NoParentArguments
 All this to implement closure in blocks
 
+2011-09-16
+AST with first TreeParser and tests
+
 Angel "Java" Lopez
 http://www.ajlopez.com/en
 http://ajlopez.wordpress.com/
